--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button>스타트업 스테이션</button>
         <button>VOD 클래스</button>
         <button>기업교육</button>
-        <button>이벤트</button>
+        <button>eventg</button>
       </div>
       <div class="loginBox">
         <button class="login">로그인</button>
